--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "Some decorators for GJS",
     "main": "src/index.ts",
     "type": "module",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/bedsteler20/gjs-decorators"
+    },
     "keywords": [
         "gjs",
         "typescript",
